--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ color:#888;
 text-align:center;
 }
 .creator a{color:#e50914;text-decoration:none;}
-input, select{
+input{
 width:100%;
 padding:14px;
 border:none;
@@ -54,7 +54,7 @@ border:none;
 border-radius:10px;
 font-size:14px;
 cursor:pointer;
-margin-bottom:12px;
+margin-bottom:15px;
 }
 .btn-secondary{background:#333;}
 .video-box{
@@ -128,10 +128,8 @@ line-height:1.6;
 </head>
 <body>
 
-<!-- HOME -->
 <div class="home" id="homeBox">
 <h2>🎬 Assistir Junto Privado PRO</h2>
-
 <p><strong>Como funciona?</strong></p>
 <p>
 🔐 Você cria ou entra em uma sala usando uma senha.<br>
@@ -140,17 +138,14 @@ line-height:1.6;
 💬 Conversa em tempo real.<br>
 👥 Só entra quem souber a senha.
 </p>
-
 <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
 <div class="global-online" id="totalOnlineGlobal">Usuários no site: 0</div>
-
 <div class="creator">
 Criador: <strong>Isac Santos</strong><br>
 Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
 </div>
 </div>
 
-<!-- LOGIN -->
 <div class="login hidden" id="loginBox">
 <h2>🔐 Entrar na Sala</h2>
 <input type="text" id="nomeUsuario" placeholder="Seu nome">
@@ -159,7 +154,6 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh<
 <button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
 </div>
 
-<!-- SALA -->
 <div class="card hidden" id="salaBox">
 <h1>🎬 Sala Privada</h1>
 <div class="online" id="onlineInfo">Online na sala: 0</div>
@@ -167,10 +161,7 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh<
 
 <input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
 <button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
-<input type="file" id="videoFile" accept="video/*">
-
-<select id="selectNovoDono" class="hidden"></select>
-<button class="btn btn-secondary hidden" id="btnTransferirDono">👑 Transferir Dono</button>
+<input type="file" id="videoFile" accept="video/*" class="btn">
 
 <div class="video-box">
 <div class="video-wrapper" id="videoArea"></div>
@@ -199,7 +190,7 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh<
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, deleteDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-const firebaseConfig={
+const firebaseConfig = {
 apiKey:"AIzaSyBFX1DJmROOkPXYgras6Z1kFOWj2y33agY",
 authDomain:"salaprivada-a0df7.firebaseapp.com",
 projectId:"salaprivada-a0df7"
@@ -212,7 +203,7 @@ let salaRef=null;
 let nomeLocal="";
 let donoSala="";
 let ultimoVideo="";
-let ultimoChat=0;
+let ultimoChatTamanho=0;
 
 window.abrirLogin=()=>{homeBox.classList.add("hidden");loginBox.classList.remove("hidden");}
 window.voltarHome=()=>{loginBox.classList.add("hidden");homeBox.classList.remove("hidden");}
@@ -224,16 +215,20 @@ let snap=await getDoc(globalRef);
 if(!snap.exists()) await setDoc(globalRef,{total:0});
 await updateDoc(globalRef,{total:increment(1)});
 }
-async function sairSite(){await updateDoc(globalRef,{total:increment(-1)});}
-entrarSite();
+
+async function sairSite(){
+await updateDoc(globalRef,{total:increment(-1)});
+}
 
 onSnapshot(globalRef,(snap)=>{
-let d=snap.data();
-if(d){
-totalOnlineGlobal.innerText="Usuários no site: "+d.total;
-if(globalSala)globalSala.innerText="Usuários no site: "+d.total;
+let dados=snap.data();
+if(dados){
+totalOnlineGlobal.innerText="Usuários no site: "+dados.total;
+if(globalSala)globalSala.innerText="Usuários no site: "+dados.total;
 }
 });
+
+entrarSite();
 
 btnEntrar.onclick=async()=>{
 let senha=senhaSala.value.trim();
@@ -252,10 +247,7 @@ donoSala=nomeLocal;
 donoSala=snap.data().dono;
 }
 
-await updateDoc(salaRef,{
-online:arrayUnion(nomeLocal),
-chat:arrayUnion({nome:"Sistema",msg:nomeLocal+" entrou na sala"})
-});
+await updateDoc(salaRef,{online:arrayUnion(nomeLocal)});
 
 loginBox.classList.add("hidden");
 salaBox.classList.remove("hidden");
@@ -266,33 +258,13 @@ if(!dados)return;
 
 donoSala=dados.dono;
 
-selectNovoDono.innerHTML="";
-if(dados.online){
-dados.online.forEach(user=>{
-if(user!==nomeLocal){
-let opt=document.createElement("option");
-opt.value=user;
-opt.textContent=user;
-selectNovoDono.appendChild(opt);
-}
-});
-}
-
-if(nomeLocal===donoSala && dados.online.length>1){
-selectNovoDono.classList.remove("hidden");
-btnTransferirDono.classList.remove("hidden");
-}else{
-selectNovoDono.classList.add("hidden");
-btnTransferirDono.classList.add("hidden");
-}
-
 if(dados.video && dados.video!==ultimoVideo){
 ultimoVideo=dados.video;
 carregarVideo(dados.video);
 }
 
-if(dados.chat && dados.chat.length!==ultimoChat){
-ultimoChat=dados.chat.length;
+if(dados.chat && dados.chat.length!==ultimoChatTamanho){
+ultimoChatTamanho=dados.chat.length;
 mostrarChat(dados.chat);
 }
 
@@ -301,31 +273,27 @@ onlineInfo.innerText="Online na sala: "+(dados.online?dados.online.length:0);
 if(nomeLocal!==donoSala){
 btnEnviarVideo.disabled=true;
 videoFile.disabled=true;
+btnEnviarVideo.style.opacity="0.5";
+videoFile.style.opacity="0.5";
 }else{
 btnEnviarVideo.disabled=false;
 videoFile.disabled=false;
+btnEnviarVideo.style.opacity="1";
+videoFile.style.opacity="1";
 }
 });
 };
 
-btnTransferirDono.onclick=async()=>{
-let novo=selectNovoDono.value;
-if(!novo)return;
-await updateDoc(salaRef,{
-dono:novo,
-chat:arrayUnion({nome:"Sistema",msg:"👑 "+novo+" agora é o novo dono da sala"})
-});
-};
-
 async function sairSala(){
-if(!salaRef){location.reload();return;}
+if(!salaRef){ location.reload(); return; }
 
 let snap=await getDoc(salaRef);
+if(!snap.exists()){ location.reload(); return; }
+
 let dados=snap.data();
 
 await updateDoc(salaRef,{
-online:arrayRemove(nomeLocal),
-chat:arrayUnion({nome:"Sistema",msg:nomeLocal+" saiu da sala"})
+online:arrayRemove(nomeLocal)
 });
 
 let novoSnap=await getDoc(salaRef);
@@ -335,11 +303,7 @@ if(novoDados.online.length===0){
 await deleteDoc(salaRef);
 }
 else if(dados.dono===nomeLocal){
-let novoDono=novoDados.online[0];
-await updateDoc(salaRef,{
-dono:novoDono,
-chat:arrayUnion({nome:"Sistema",msg:"👑 "+novoDono+" agora é o novo dono da sala"})
-});
+await updateDoc(salaRef,{dono:novoDados.online[0]});
 }
 
 await sairSite();
