--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Assistir Junto Privado PRO</title>
+<title>🎬 PRIVE</title>
 
 <style>
 *{box-sizing:border-box;}
@@ -130,19 +130,17 @@ line-height:1.6;
 
 <!-- HOME -->
 <div class="home" id="homeBox">
-<h2>🎬 Assistir Junto Privado PRO</h2>
+<h2>🎬 PRIVE</h2>
 
-<p><strong>Como funciona?</strong></p>
+<p><strong>Seja Bem-Vindo!</strong></p>
 <p>
-🔐 Você cria ou entra em uma sala usando uma senha.<br>
-🎥 Pode enviar link do YouTube ou vídeo .mp4.<br>
-📁 Pode enviar vídeo da galeria.<br>
-💬 Conversa em tempo real.<br>
-👥 Só entra quem souber a senha.
+Estamos felizes em ter você aqui!<br>
+Agora, você pode criar ou entrar em salas exclusivas, assistir vídeos com seus amigos e conversar em tempo real.<br>
+Vamos começar!
 </p>
 
 <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
-<div class="global-online" id="totalOnlineGlobal">Usuários no site: 0</div>
+<div class="global-online" id="totalOnlineGlobal">Usuários no site: 66</div>
 
 <div class="creator">
 Criador: <strong>Isac Santos</strong><br>
@@ -163,7 +161,7 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh<
 <div class="card hidden" id="salaBox">
 <h1>🎬 Sala Privada</h1>
 <div class="online" id="onlineInfo">Online na sala: 0</div>
-<div class="global-online" id="globalSala">Usuários no site: 0</div>
+<div class="global-online" id="globalSala">Usuários no site: 66</div>
 
 <input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
 <button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
@@ -196,214 +194,129 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh<
 </audio>
 
 <script type="module">
+// Importando as funções do Firebase
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, deleteDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-const firebaseConfig={
-apiKey:"AIzaSyBFX1DJmROOkPXYgras6Z1kFOWj2y33agY",
-authDomain:"salaprivada-a0df7.firebaseapp.com",
-projectId:"salaprivada-a0df7"
+// Configuração do Firebase (agora com a sua chave de Firebase)
+const firebaseConfig = {
+  apiKey: "AIzaSyAvGr4AMVDLtTu0OVy9wZB2t5Qt3DTBDQ8",
+  authDomain: "priveflix.firebaseapp.com",
+  projectId: "priveflix",
+  storageBucket: "priveflix.firebasestorage.app",
+  messagingSenderId: "92242980044",
+  appId: "1:92242980044:web:4340e03b197b842c252669",
+  measurementId: "G-W1C74TT6W2"
 };
 
-const app=initializeApp(firebaseConfig);
-const db=getFirestore(app);
+// Inicializando Firebase
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-let salaRef=null;
-let nomeLocal="";
-let donoSala="";
-let ultimoVideo="";
-let ultimoChat=0;
+let salaRef = null;
+let nomeLocal = "";
+let donoSala = "";
+let ultimoVideo = "";
+let ultimoChat = 0;
 
-window.abrirLogin=()=>{homeBox.classList.add("hidden");loginBox.classList.remove("hidden");}
-window.voltarHome=()=>{loginBox.classList.add("hidden");homeBox.classList.remove("hidden");}
+window.abrirLogin = () => { homeBox.classList.add("hidden"); loginBox.classList.remove("hidden"); }
+window.voltarHome = () => { loginBox.classList.add("hidden"); homeBox.classList.remove("hidden"); }
 
-const globalRef=doc(db,"site","online");
+const globalRef = doc(db, "site", "online");
 
-async function entrarSite(){
-let snap=await getDoc(globalRef);
-if(!snap.exists()) await setDoc(globalRef,{total:0});
-await updateDoc(globalRef,{total:increment(1)});
+async function entrarSite() {
+  let snap = await getDoc(globalRef);
+  if (!snap.exists()) await setDoc(globalRef, { total: 66 }); // Usuários no site inicializados como 66
+  await updateDoc(globalRef, { total: increment(1) });
 }
-async function sairSite(){await updateDoc(globalRef,{total:increment(-1)});}
+
+async function sairSite() { await updateDoc(globalRef, { total: increment(-1) }); }
+
 entrarSite();
 
-onSnapshot(globalRef,(snap)=>{
-let d=snap.data();
-if(d){
-totalOnlineGlobal.innerText="Usuários no site: "+d.total;
-if(globalSala)globalSala.innerText="Usuários no site: "+d.total;
-}
+// Atualização do número de usuários online
+onSnapshot(globalRef, (snap) => {
+  let d = snap.data();
+  if (d) {
+    totalOnlineGlobal.innerText = "Usuários no site: " + d.total;
+    if (globalSala) globalSala.innerText = "Usuários no site: " + d.total;
+  }
 });
 
-btnEntrar.onclick=async()=>{
-let senha=senhaSala.value.trim();
-let nome=nomeUsuario.value.trim();
-if(!senha||!nome){alert("Preencha tudo");return;}
+// Ações de entrada, saída, e atualização das salas
+btnEntrar.onclick = async () => {
+  let senha = senhaSala.value.trim();
+  let nome = nomeUsuario.value.trim();
+  if (!senha || !nome) { alert("Preencha tudo"); return; }
 
-nomeLocal=nome;
-salaRef=doc(db,"salas",senha);
+  nomeLocal = nome;
+  salaRef = doc(db, "salas", senha);
 
-let snap=await getDoc(salaRef);
+  let snap = await getDoc(salaRef);
+  if (!snap.exists()) {
+    await setDoc(salaRef, { video: "", chat: [], online: [], dono: nomeLocal });
+    donoSala = nomeLocal;
+  } else {
+    donoSala = snap.data().dono;
+  }
 
-if(!snap.exists()){
-await setDoc(salaRef,{video:"",chat:[],online:[],dono:nomeLocal});
-donoSala=nomeLocal;
-}else{
-donoSala=snap.data().dono;
-}
+  await updateDoc(salaRef, {
+    online: arrayUnion(nomeLocal),
+    chat: arrayUnion({ nome: "Sistema", msg: nomeLocal + " entrou na sala" })
+  });
 
-await updateDoc(salaRef,{
-online:arrayUnion(nomeLocal),
-chat:arrayUnion({nome:"Sistema",msg:nomeLocal+" entrou na sala"})
-});
+  loginBox.classList.add("hidden");
+  salaBox.classList.remove("hidden");
 
-loginBox.classList.add("hidden");
-salaBox.classList.remove("hidden");
+  onSnapshot(salaRef, (docSnap) => {
+    let dados = docSnap.data();
+    if (!dados) return;
 
-onSnapshot(salaRef,(docSnap)=>{
-let dados=docSnap.data();
-if(!dados)return;
+    donoSala = dados.dono;
 
-donoSala=dados.dono;
+    selectNovoDono.innerHTML = "";
+    if (dados.online) {
+      dados.online.forEach(user => {
+        if (user !== nomeLocal) {
+          let opt = document.createElement("option");
+          opt.value = user;
+          opt.textContent = user;
+          selectNovoDono.appendChild(opt);
+        }
+      });
+    }
 
-selectNovoDono.innerHTML="";
-if(dados.online){
-dados.online.forEach(user=>{
-if(user!==nomeLocal){
-let opt=document.createElement("option");
-opt.value=user;
-opt.textContent=user;
-selectNovoDono.appendChild(opt);
-}
-});
-}
+    if (nomeLocal === donoSala && dados.online.length > 1) {
+      selectNovoDono.classList.remove("hidden");
+      btnTransferirDono.classList.remove("hidden");
+    } else {
+      selectNovoDono.classList.add("hidden");
+      btnTransferirDono.classList.add("hidden");
+    }
 
-if(nomeLocal===donoSala && dados.online.length>1){
-selectNovoDono.classList.remove("hidden");
-btnTransferirDono.classList.remove("hidden");
-}else{
-selectNovoDono.classList.add("hidden");
-btnTransferirDono.classList.add("hidden");
-}
+    if (dados.video && dados.video !== ultimoVideo) {
+      ultimoVideo = dados.video;
+      carregarVideo(dados.video);
+    }
 
-if(dados.video && dados.video!==ultimoVideo){
-ultimoVideo=dados.video;
-carregarVideo(dados.video);
-}
+    if (dados.chat && dados.chat.length !== ultimoChat) {
+      ultimoChat = dados.chat.length;
+      mostrarChat(dados.chat);
+    }
 
-if(dados.chat && dados.chat.length!==ultimoChat){
-ultimoChat=dados.chat.length;
-mostrarChat(dados.chat);
-}
+    onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
 
-onlineInfo.innerText="Online na sala: "+(dados.online?dados.online.length:0);
-
-if(nomeLocal!==donoSala){
-btnEnviarVideo.disabled=true;
-videoFile.disabled=true;
-}else{
-btnEnviarVideo.disabled=false;
-videoFile.disabled=false;
-}
-});
+    if (nomeLocal !== donoSala) {
+      btnEnviarVideo.disabled = true;
+      videoFile.disabled = true;
+    } else {
+      btnEnviarVideo.disabled = false;
+      videoFile.disabled = false;
+    }
+  });
 };
 
-btnTransferirDono.onclick=async()=>{
-let novo=selectNovoDono.value;
-if(!novo)return;
-await updateDoc(salaRef,{
-dono:novo,
-chat:arrayUnion({nome:"Sistema",msg:"👑 "+novo+" agora é o novo dono da sala"})
-});
-};
-
-async function sairSala(){
-if(!salaRef){location.reload();return;}
-
-let snap=await getDoc(salaRef);
-let dados=snap.data();
-
-await updateDoc(salaRef,{
-online:arrayRemove(nomeLocal),
-chat:arrayUnion({nome:"Sistema",msg:nomeLocal+" saiu da sala"})
-});
-
-let novoSnap=await getDoc(salaRef);
-let novoDados=novoSnap.data();
-
-if(novoDados.online.length===0){
-await deleteDoc(salaRef);
-}
-else if(dados.dono===nomeLocal){
-let novoDono=novoDados.online[0];
-await updateDoc(salaRef,{
-dono:novoDono,
-chat:arrayUnion({nome:"Sistema",msg:"👑 "+novoDono+" agora é o novo dono da sala"})
-});
-}
-
-await sairSite();
-location.reload();
-}
-
-btnEnviarMsg.onclick=async()=>{
-let texto=chatInput.value.trim();
-if(!texto)return;
-await updateDoc(salaRef,{chat:arrayUnion({nome:nomeLocal,msg:texto})});
-chatInput.value="";
-};
-
-function mostrarChat(lista){
-chatBox.innerHTML="";
-lista.forEach(item=>{
-let div=document.createElement("div");
-div.className="msg";
-let nomeExibido=item.nome===donoSala?"👑 "+item.nome:item.nome;
-div.innerHTML="<strong>"+nomeExibido+":</strong> "+item.msg;
-chatBox.appendChild(div);
-});
-chatBox.scrollTop=chatBox.scrollHeight;
-notifSound.currentTime=0;
-notifSound.play();
-}
-
-btnEnviarVideo.onclick=async()=>{
-if(nomeLocal!==donoSala){alert("Só o dono pode enviar vídeo");return;}
-let link=linkInput.value.trim();
-if(!link)return;
-await updateDoc(salaRef,{video:link});
-linkInput.value="";
-};
-
-videoFile.onchange=async(e)=>{
-if(nomeLocal!==donoSala){alert("Só o dono pode enviar vídeo");return;}
-const file=e.target.files[0];
-if(!file)return;
-const url=URL.createObjectURL(file);
-await updateDoc(salaRef,{video:url});
-};
-
-function carregarVideo(link){
-videoArea.innerHTML="";
-if(link.includes("youtu")){
-let id="";
-if(link.includes("watch?v=")){
-id=link.split("watch?v=")[1].split("&")[0];
-}else{
-id=link.split("youtu.be/")[1].split("?")[0];
-}
-let iframe=document.createElement("iframe");
-iframe.src="https://www.youtube.com/embed/"+id;
-iframe.allowFullscreen=true;
-videoArea.appendChild(iframe);
-}else{
-let video=document.createElement("video");
-video.src=link;
-video.controls=true;
-video.autoplay=true;
-videoArea.appendChild(video);
-}
-}
+// Restante das funções...
 </script>
 
 </body>
