--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Agora, você pode criar ou entrar em salas exclusivas, assistir vídeos com seus
 Vamos começar!
 </p>
 
-<button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
+<button class="btn" onclick="abrirLogin()">Entrar</button>
 <div class="global-online" id="totalOnlineGlobal">Usuários no site: 66</div>
 
 <div class="creator">
@@ -150,7 +150,7 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@romavuh</a
 
 <!-- LOGIN -->
 <div class="login hidden" id="loginBox">
-<h2>🔐 Entrar na Sala</h2>
+<h2>Registrar</h2>
 <input type="text" id="nomeUsuario" placeholder="Seu nome">
 <input type="password" id="senhaSala" placeholder="Senha da sala">
 <button class="btn" id="btnEntrar">Entrar</button>
